@@ -2,7 +2,7 @@
 # and all subdirectories).
 # Makefile for the top-level directory of GNU Chess.
 #
-# Copyright (C) 2001-2013 Free Software Foundation, Inc.
+# Copyright (C) 2001-2015 Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -25,8 +25,15 @@ SUBDIRS = src doc po man
 
 dist_pkgdata_DATA = src/gnuchess.ini src/smallbook.bin
 
+# For recognition and usage by GUIs
+pluginsdir=@PLUGINSDIR@
+engdir=$(pluginsdir)/xboard
+eng_DATA = misc/gnuchess.eng
+logodir=$(pluginsdir)/logos
+logo_DATA = misc/gnuchess.png
+
 # Additional files to distribute.
-EXTRA_DIST = config.rpath m4/ChangeLog  TODO src/gnuchess.ini src/smallbook.bin src/gnuchessx src/gnuchessu doc/quotes.rb lib/gettext.h
+EXTRA_DIST = config.rpath m4/ChangeLog  TODO src/gnuchess.ini src/smallbook.bin src/gnuchessx src/gnuchessu doc/quotes.rb lib/gettext.h misc/gnuchess.eng misc/gnuchess.png
 
 DISTCLEANFILES = *~ src/GCint.h
 pkgdatadir =$(datadir)/gnuchess
